@@ -2,6 +2,7 @@ version 0.9.3+
 	* Add CustomHash wrapper to set __jug_hash__
 	* Print traceback on import error
 	* Exit when no progress is made even with barrier
+	* Use Tasklets for better jug.mapreduce.map
 
 version 0.9.3 Sun Dec 2 2012 by luispedro
 	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
